--- a/sala-de-reuniao-frontend/client-room/src/app/app.component.html
+++ b/sala-de-reuniao-frontend/client-room/src/app/app.component.html
@@ -2,10 +2,10 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-        <a routerLink="room" class="nav-link" routerLinkActive="active">Room List</a>
+        <a routerLink="room" class="nav-link" routerLinkActive="active">Listar Salas</a>
     </li>
     <li class="nav-item">
-        <a routerLink="add" class="nav-link" routerLinkActive="active">Add Room</a>
+        <a routerLink="add" class="nav-link" routerLinkActive="active">Criar Sala</a>
     </li>
   </ul>
 </nav>
@@ -20,8 +20,10 @@
   </div>
 </div>
 
-<footer class="footer">
-  <div class="container">
-      <span>teste</span>
-  </div>
+<!-- Footer -->
+<footer >
+
+  <div class="text-center py-3">abrito10@gmail.com</div>
+
 </footer>
+<!-- Footer -->
