--- a/sala-de-reuniao-frontend/client-room/src/app/room-details/room-details.component.html
+++ b/sala-de-reuniao-frontend/client-room/src/app/room-details/room-details.component.html
@@ -3,20 +3,20 @@
 <hr />
 <div *ngIf="room">
     <div>
-        <label><b>Name </b></label> {{room.name}}
+        <label><b>Nome </b></label> {{room.name}}
     </div>
     <div>
-        <label><b> date</b></label> {{room.date}}
+        <label><b>Data </b></label> {{room.date}}
     </div>
     <div>
-        <label><b> startHour</b></label> {{room.startHour}}
+        <label><b>Hora de Inicio</b></label> {{room.startHour}}
     </div>
     <div>
-        <label><b> endHour</b></label> {{room.endHour}}
+        <label><b>Hora de Término</b></label> {{room.endHour}}
     </div>
 </div>
 
 <br>
 <br>
 
-<button (click)="list()" class="btn btn-primary">Back to Room List</button><br>
+<button (click)="list()" class="btn btn-primary">Voltar para Lista de salas</button><br>
